--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav bg-white ms-auto d-flex align-items-center ">
+                    <ul class="navbar-nav ms-auto d-flex align-items-center ">
                         <li class="nav-item mx-3">
                             <a class="nav-link active" aria-current="page" href="#Features">Features</a>
                         </li>
